[gd_scene load_steps=11 format=3 uid="uid://drn6gtw2siu6j"]

[ext_resource type="Script" path="res://scripts/mgr_transition.gd" id="1_3detq"]

[sub_resource type="Animation" id="Animation_dba3n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tran1/ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(900, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tran1/ColorRect2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-450, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Tran3/ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Tran2/ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.95158, 0.95158, 0.95158, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Tran4/ColorRect:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -360)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Tran4/ColorRect2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 720)]
}

[sub_resource type="Animation" id="Animation_sq56b"]
resource_name = "bars_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tran1/ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.35, 0.35),
"update": 0,
"values": [Vector2(900, 0), Vector2(450, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tran1/ColorRect2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.35, 0.35),
"update": 0,
"values": [Vector2(-450, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_iywpv"]
resource_name = "bars_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tran1/ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.35, 0.35),
"update": 0,
"values": [Vector2(450, 0), Vector2(900, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tran1/ColorRect2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.35, 0.35),
"update": 0,
"values": [Vector2(0, 0), Vector2(-450, 0)]
}

[sub_resource type="Animation" id="Animation_k1gs5"]
resource_name = "fade_in"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tran3/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_fsdjg"]
resource_name = "fade_out"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tran3/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_h7p68"]
resource_name = "reset_fade_in"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tran2/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.95158, 0.95158, 0.95158, 1)]
}

[sub_resource type="Animation" id="Animation_c6s7g"]
resource_name = "sidebars_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tran4/ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.35, 0.35),
"update": 0,
"values": [Vector2(0, -360), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tran4/ColorRect2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.35, 0.35),
"update": 0,
"values": [Vector2(0, 720), Vector2(0, 360)]
}

[sub_resource type="Animation" id="Animation_5ihbp"]
resource_name = "sidebars_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tran4/ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.353, 0.353),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -360)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tran4/ColorRect2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.353, 0.353),
"update": 0,
"values": [Vector2(0, 360), Vector2(0, 720)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8gx62"]
_data = {
"RESET": SubResource("Animation_dba3n"),
"bars_in": SubResource("Animation_sq56b"),
"bars_out": SubResource("Animation_iywpv"),
"fade_in": SubResource("Animation_k1gs5"),
"fade_out": SubResource("Animation_fsdjg"),
"reset_fade_in": SubResource("Animation_h7p68"),
"sidebars_in": SubResource("Animation_c6s7g"),
"sidebars_out": SubResource("Animation_5ihbp")
}

[node name="Trans" type="CanvasLayer"]
process_mode = 3
layer = 10
script = ExtResource("1_3detq")

[node name="TransAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8gx62")
}

[node name="Tran1" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Tran1"]
offset_left = 900.0
offset_right = 1350.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="Tran1"]
offset_left = -450.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="Tran2" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Tran2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 900.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.95158, 0.95158, 0.95158, 1)

[node name="Tran3" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Tran3"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 900.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 0)

[node name="Tran4" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Tran4"]
offset_top = -360.0
offset_right = 900.0
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="Tran4"]
offset_top = 720.0
offset_right = 900.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)
